more custom settings

--- a/dotfiles/.config/hypr/conf/keybindings/default.conf
+++ b/dotfiles/.config/hypr/conf/keybindings/default.conf
@@ -109,7 +109,7 @@ bind = $mainMod, F2, exec, postman
 bind = ALT, F2, exec, httpie-desktop --ozone-platform-hint=auto
 bind = $mainMod SHIFT, F9, exec, telegram-desktop
 bind = $mainMod, F9, exec, whatsdesk --ozone-platform-hint=auto
-bind = $mainMod, F10, exec, spotify
+bind = $mainMod, F10, exec, spotify --ozone-platform-hint=wayland
 bind = $mainMod SHIFT, B, exec, brave
 
 bind = $mainMod, F, fullscreen, 0
