--- a/dotfiles/.config/hypr/conf/windowrules/default.conf
+++ b/dotfiles/.config/hypr/conf/windowrules/default.conf
@@ -3,15 +3,15 @@
 source = window_types.conf
 
 # default start
-windowrulev2 = float, class: ^(pavucontrol)$
-windowrulev2 = float, class: ^(blueman-manager)$
-windowrulev2 = float, class: ^(nm-connection-editor)$
-windowrulev2 = float, class: ^(qalculate-gtk)$
+windowrulev2 = float, class: ^((?i)pavucontrol)$
+windowrulev2 = float, class: ^((?i)blueman-manager)$
+windowrulev2 = float, class: ^((?i)nm-connection-editor)$
+windowrulev2 = float, class: ^((?i)qalculate-gtk)$
 
 # Browser Picture in Picture
-windowrulev2 = float, title:^(Picture-in-Picture)$
-windowrulev2 = pin, title:^(Picture-in-Picture)$
-windowrulev2 = move 69.5% 4%, title:^(Picture-in-Picture)$
+windowrulev2 = float, title:^((?i)Picture-in-Picture)$
+windowrulev2 = pin, title:^((?i)Picture-in-Picture)$
+windowrulev2 = move 69.5% 4%, title:^((?i)Picture-in-Picture)$
 # default end
 
 # --------------------------------------------------------------------------------
@@ -19,133 +19,132 @@ windowrulev2 = move 69.5% 4%, title:^(Picture-in-Picture)$
 
 # ------------------------------------------------------------------------
 # tipos de visualizacion
-#windowrulev2 = fullscreen, class:^(kitty)$
-windowrulev2 = maximize, class:^(whatsdesk)$
-windowrulev2 = maximize, class:^(.*telegram.*)$
-windowrulev2 = maximize, class:^(.*Spotify.*)$
-windowrulev2 = fullscreen, class:^(.*Postman.*)$
-windowrulev2 = fullscreen, class:^(.*HTTPie.*)$
+#windowrulev2 = fullscreen, class:^((?i)kitty)$
+windowrulev2 = maximize, class:^((?i)whatsdesk)$
+windowrulev2 = maximize, class:^((?i).*telegram.*)$
+windowrulev2 = maximize, class:^((?i).*spotify.*)$
+windowrulev2 = fullscreen, class:^((?i).*Postman.*)$
+windowrulev2 = fullscreen, class:^((?i).*HTTPie.*)$
 
-windowrulev2 = float, center, class:^(.*megasync.*)$
-windowrulev2 = size 0 0, class:^(.*megasync.*)$, title:^(.*MEGAsync.*)$
+windowrulev2 = float, center, class:^((?i).*megasync.*)$
+windowrulev2 = size 0 0, class:^((?i).*megasync.*)$, title:^((?i).*MEGAsync.*)$
 
-windowrulev2 = float, class:^(jetbrains-.*)$, title:^(.*Setting.*|.*setting.*|Project Structure|project structure|New Project|new project)$
-windowrulev2 = center, class:^(jetbrains-.*)$, title:^(.*Setting.*|.*setting.*|Project Structure|project structure|New Project|new project)$
-windowrulev2 = size 900 749, class:^(jetbrains-.*)$, title:^(.*Setting.*|.*setting.*)$
-windowrulev2 = size 1106 664, class:^(jetbrains-.*)$, title:^(Project Structure|project structure)$
-windowrulev2 = size 877 703, class:^(jetbrains-.*)$, title:^(New Project|new project)$
+windowrulev2 = float, class:^(jetbrains-.*)$, title:^((?i).*setting.*|(?i)project structure|(?i)new project)$
+windowrulev2 = center, class:^(jetbrains-.*)$, title:^((?i).*setting.*|(?i)project structure|(?i)new project)$
+windowrulev2 = size 900 749, class:^(jetbrains-.*)$, title:^((?i).*setting.*)$
+windowrulev2 = size 1106 664, class:^(jetbrains-.*)$, title:^((?i)project structure)$
+windowrulev2 = size 877 703, class:^(jetbrains-.*)$, title:^((?i)new project)$
 
 
-windowrulev2 = float, title:^(.*Welcome.*|.*welcome.*)$
-windowrulev2 = center, title:^(.*Welcome.*|.*welcome.*)$
+windowrulev2 = float, title:^((?i)welcome.*)$
+windowrulev2 = center, title:^((?i)welcome.*)$
 
-windowrulev2 = float, title:^(.*Plugin Updates.*|.*plugin updates.*|.*Plugin updates.*|.*plugin Updates.*)$
-windowrulev2 = center, title:^(.*Plugin Updates.*|.*plugin updates.*|.*Plugin updates.*|.*plugin Updates.*)$
-windowrulev2 = size 0 0, title:^(.*Plugin Updates.*|.*plugin updates.*|.*Plugin updates.*|.*plugin Updates.*)$
+windowrulev2 = float, title:^((?i).*Plugin Updates.*)$
+windowrulev2 = center, title:^((?i).*Plugin Updates)$
+windowrulev2 = size 0 0, title:^((?i).*Plugin Updates.*)$
 
-#windowrulev2 = maximize, class:^(jetbrains-.*)$
-windowrulev2 = maximize, class:^(.*chrome.*)$
-windowrulev2 = maximize, class:^(Brave.*)$
+#windowrulev2 = maximize, class:^((?i)jetbrains-.*)$
+windowrulev2 = maximize, class:^((?i).*chrome.*)$
+windowrulev2 = maximize, class:^((?i)Brave.*)$
 
 # se pueden usar dos propiedades o condiciones en una sola linea, pero por orden se separan
 # VSCodium
-windowrulev2 = float, class:^(.*codium.*|.*Codium.*), title:^(.*Save .*|.*save .*|.*Open .*|.*open .*)
-windowrulev2 = center, class:^(.*codium.*|.*Codium.*), title:^(.*Save .*|.*save .*|.*Open .*|.*open .*)
-windowrulev2 = size 50% 70%, class:^(.*codium.*|.*Codium.*), title:^(.*Save .*|.*save .*|.*Open .*|.*open .*)
+windowrulev2 = float, class:^((?i).*codium.*), title:^((?i).*Save .*|(?i).*Open .*)
+windowrulev2 = center, class:^((?i).*codium.*), title:^((?i).*Save .*|(?i).*Open .*)
+windowrulev2 = size 50% 70%, class:^((?i).*codium.*), title:^((?i).*Save .*|(?i).*Open .*)
 
 # desktop portal
-windowrulev2 = float, class:^(.*desktop-portal-gtk)$
-windowrulev2 = center, class:^(.*desktop-portal-gtk)$
+windowrulev2 = float, class:^((?i).*desktop-portal-gtk)$
+windowrulev2 = center, class:^((?i).*desktop-portal-gtk)$
 
 # ark
-windowrulev2 = float, class:^(org.kde.ark)$
-windowrulev2 = center, class:^(org.kde.ark)$
-windowrulev2 = size 50% 80%, class:^(org.kde.ark)$
+windowrulev2 = float, class:^((?i)org.kde.ark)$
+windowrulev2 = center, class:^((?i)org.kde.ark)$
+windowrulev2 = size 50% 80%, class:^((?i)org.kde.ark)$
 
 # nemo file roller
-windowrulev2 = float, class:^(.*FileRoller)$
-windowrulev2 = center, class:^(.*FileRoller)$
+windowrulev2 = float, class:^((?i).*FileRoller)$
+windowrulev2 = center, class:^((?i).*FileRoller)$
 
 # nemo properties
-windowrulev2 = float, center, class:^(.*nemo)$, title:^(Propiedades de.*|Properties .*)$
-windowrulev2 = size 50% 80%, class:^(.*nemo)$, title:^(Propiedades de.*|Properties .*)$
+windowrulev2 = float, center, class:^((?i).*nemo)$, title:^((?i)Propiedades de.*|(?i)Properties .*)$
+windowrulev2 = size 50% 80%, class:^((?i).*nemo)$, title:^((?i)Propiedades de.*|(?i)Properties .*)$
 
 
 # Gnome Calendar
-windowrulev2 = float, class:^(.*Calendar)$
-windowrulev2 = center, class:^(.*Calendar)$
-windowrulev2 = float, class:^(.*calendar)$
-windowrulev2 = center, class:^(.*calendar)$
+windowrulev2 = float, class:^((?i).*Calendar)$
+windowrulev2 = center, class:^((?i).*Calendar)$
 
 
 # Nemo Terminal
-windowrulev2 = float, class:^(nemo-terminal-prefs)$
-windowrulev2 = center, class:^(nemo-terminal-prefs)$
+windowrulev2 = float, class:^((?i)nemo-terminal-prefs)$
+windowrulev2 = center, class:^((?i)nemo-terminal-prefs)$
 
 
 # Gwenview
-windowrulev2 = float, class:^(.*gwenview)$
-windowrulev2 = center, class:^(.*gwenview)$
-windowrulev2 = size 50% 80%, class:^(.*gwenview)$
+windowrulev2 = float, class:^((?i).*gwenview)$
+windowrulev2 = center, class:^((?i).*gwenview)$
+windowrulev2 = size 50% 80%, class:^((?i).*gwenview)$
 
 #Shotwell
 $w_class=Shotwell
-windowrulev2 = float, class:^(.*$w_class)$
-windowrulev2 = center, class:^(.*$w_class)$
-windowrulev2 = size 50% 80%, class:^(.*$w_class)$
-$w_class=shotwell
-windowrulev2 = float, class:^(.*$w_class)$
+windowrulev2 = float, class:^((?i).*$w_class)$
 windowrulev2 = center, class:^(.*$w_class)$
 windowrulev2 = size 50% 80%, class:^(.*$w_class)$
 
 
 #Whatsdesk
 #$w_class=whatsdesk
-#windowrulev2 = float, class:^(.*$w_class)$
-#windowrulev2 = center, class:^(.*$w_class)$
-#windowrulev2 = size 70% 90%, class:^(.*$w_class)$
-#windowrulev2 = move onscreen 15% 7%, class:^(.*$w_class)$
+#windowrulev2 = float, class:^((?i).*$w_class)$
+#windowrulev2 = center, class:^((?i).*$w_class)$
+#windowrulev2 = size 70% 90%, class:^((?i).*$w_class)$
+#windowrulev2 = move onscreen 15% 7%, class:^((?i).*$w_class)$
 
 #Telegram
 #$w_class=telegram
-#windowrulev2 = float, class:^(.*$w_class.*)$
-#windowrulev2 = center, class:^(.*$w_class.*)$
-#windowrulev2 = size 80% 90%, class:^(.*$w_class.*)$
-#windowrulev2 = move onscreen 5% 7%, class:^(.*$w_class.*)$
+#windowrulev2 = float, class:^((?i).*$w_class.*)$
+#windowrulev2 = center, class:^((?i).*$w_class.*)$
+#windowrulev2 = size 80% 90%, class:^((?i).*$w_class.*)$
+#windowrulev2 = move onscreen 5% 7%, class:^((?i).*$w_class.*)$
+
+#Qmmp
+$w_class=qmmp
+windowrulev2 = float, class:^((?i).*$w_class.*)$
+windowrulev2 = center, class:^((?i).*$w_class.*)$
+windowrulev2 = size 722 571, class:^((?i).*$w_class.*)$
+
 
 # -------------------------------------------------------------------------
 
 # decoraciones
-windowrulev2 = noblur, class:^(jetbrains-.*)$
-windowrulev2 = noblur, class:^(.*codium)$
-windowrulev2 = opaque, class:^(jetbrains-.*)$
-windowrulev2 = opaque, class:^(.*codium)$
+windowrulev2 = noblur, opaque, class:^((?i)jetbrains-.*)$
+windowrulev2 = noblur, opaque, class:^((?i).*codium)$
 
 
 # -------------------------------------------------------------------------
 
 # workspace 1
 $WORKSPACE=1
-windowrulev2 = workspace $WORKSPACE, class:^(jetbrains-.*)$
+windowrulev2 = workspace $WORKSPACE, class:^((?i)jetbrains-.*)$
 
 
 
 # workspace 2
 $WORKSPACE=2
-windowrulev2 = workspace $WORKSPACE, class:^(.*Postman.*)$
-windowrulev2 = workspace $WORKSPACE, class:^(.*HTTPie.*)$
-windowrulev2 = workspace $WORKSPACE, class:^(.*codium)$
+windowrulev2 = workspace $WORKSPACE, class:^((?i).*Postman.*)$
+windowrulev2 = workspace $WORKSPACE, class:^((?i).*HTTPie.*)$
+windowrulev2 = workspace $WORKSPACE, class:^((?i).*codium)$
 
 
 # workspace 3
 $WORKSPACE=3
-windowrulev2 = workspace $WORKSPACE, class:^(Brave.*)$
+windowrulev2 = workspace $WORKSPACE, class:^((?i)brave.*)$
 
 
 
 # workspace 4
 $WORKSPACE=4
-windowrulev2 = workspace $WORKSPACE, class:^(.*chrome.*)$
+windowrulev2 = workspace $WORKSPACE, class:^((?i).*chrome.*)$
 
 
 
@@ -166,22 +165,22 @@ $WORKSPACE=7
 
 # workspace 8
 $WORKSPACE=8
-windowrulev2 = workspace $WORKSPACE, class:^(.*Nautilus)$
-windowrulev2 = workspace $WORKSPACE, class:^(.*dolphin)$
-windowrulev2 = workspace $WORKSPACE, class:^(nemo)$
+windowrulev2 = workspace $WORKSPACE, class:^((?i).*Nautilus)$
+windowrulev2 = workspace $WORKSPACE, class:^((?i).*dolphin)$
+windowrulev2 = workspace $WORKSPACE, class:^((?i)nemo)$
 
 
 
 # workspace 9
 $WORKSPACE=9
-windowrulev2 = workspace $WORKSPACE, class:^(whatsdesk)$
-windowrulev2 = workspace $WORKSPACE, class:^(.*telegram.*)$
+windowrulev2 = workspace $WORKSPACE, class:^((?i)whatsdesk)$
+windowrulev2 = workspace $WORKSPACE, class:^((?i).*telegram.*)$
 
 
 
 # workspace 10
 $WORKSPACE=10
-windowrulev2 = workspace $WORKSPACE, class:^(.*Spotify.*)$
+windowrulev2 = workspace $WORKSPACE, class:^((?i).*spotify.*)$
 
 
 
