changed resolution and window rules

--- a/dotfiles/.config/hypr/conf/windowrules/default.conf
+++ b/dotfiles/.config/hypr/conf/windowrules/default.conf
@@ -16,7 +16,6 @@ windowrulev2 = move 69.5% 4%, title:^((?i)Picture-in-Picture)$
 
 # --------------------------------------------------------------------------------
 
-
 # ------------------------------------------------------------------------
 # tipos de visualizacion
 #windowrulev2 = fullscreen, class:^((?i)kitty)$
@@ -31,10 +30,9 @@ windowrulev2 = size 0 0, class:^((?i).*megasync.*)$, title:^((?i).*MEGAsync.*)$
 
 windowrulev2 = float, class:^(jetbrains-.*)$, title:^((?i).*setting.*|(?i)project structure|(?i)new project)$
 windowrulev2 = center, class:^(jetbrains-.*)$, title:^((?i).*setting.*|(?i)project structure|(?i)new project)$
-windowrulev2 = size 900 749, class:^(jetbrains-.*)$, title:^((?i).*setting.*)$
-windowrulev2 = size 1106 664, class:^(jetbrains-.*)$, title:^((?i)project structure)$
-windowrulev2 = size 877 703, class:^(jetbrains-.*)$, title:^((?i)new project)$
-
+windowrulev2 = size 0 0, class:^(jetbrains-.*)$, title:^((?i).*setting.*)$
+windowrulev2 = size 0 0, class:^(jetbrains-.*)$, title:^((?i)project structure)$
+windowrulev2 = size 0 0, class:^(jetbrains-.*)$, title:^((?i)new project)$
 
 windowrulev2 = float, title:^((?i)welcome.*)$
 windowrulev2 = center, title:^((?i)welcome.*)$
@@ -43,7 +41,6 @@ windowrulev2 = float, title:^((?i).*Plugin Updates.*)$
 windowrulev2 = center, title:^((?i).*Plugin Updates)$
 windowrulev2 = size 0 0, title:^((?i).*Plugin Updates.*)$
 
-#windowrulev2 = maximize, class:^((?i)jetbrains-.*)$
 windowrulev2 = maximize, class:^((?i).*chrome.*)$
 windowrulev2 = maximize, class:^((?i)Brave.*)$
 
@@ -70,16 +67,13 @@ windowrulev2 = center, class:^((?i).*FileRoller)$
 windowrulev2 = float, center, class:^((?i).*nemo)$, title:^((?i)Propiedades de.*|(?i)Properties .*)$
 windowrulev2 = size 50% 80%, class:^((?i).*nemo)$, title:^((?i)Propiedades de.*|(?i)Properties .*)$
 
-
 # Gnome Calendar
 windowrulev2 = float, class:^((?i).*Calendar)$
 windowrulev2 = center, class:^((?i).*Calendar)$
 
-
 # Nemo Terminal
 windowrulev2 = float, class:^((?i)nemo-terminal-prefs)$
 windowrulev2 = center, class:^((?i)nemo-terminal-prefs)$
-
 
 # Gwenview
 windowrulev2 = float, class:^((?i).*gwenview)$
@@ -91,7 +85,6 @@ $w_class=Shotwell
 windowrulev2 = float, class:^((?i).*$w_class)$
 windowrulev2 = center, class:^(.*$w_class)$
 windowrulev2 = size 50% 80%, class:^(.*$w_class)$
-
 
 #Whatsdesk
 #$w_class=whatsdesk
@@ -111,8 +104,7 @@ windowrulev2 = size 50% 80%, class:^(.*$w_class)$
 $w_class=qmmp
 windowrulev2 = float, class:^((?i).*$w_class.*)$
 windowrulev2 = center, class:^((?i).*$w_class.*)$
-windowrulev2 = size 722 571, class:^((?i).*$w_class.*)$
-
+windowrulev2 = size 38% 53%, class:^((?i).*$w_class.*)$
 
 # -------------------------------------------------------------------------
 
@@ -120,14 +112,11 @@ windowrulev2 = size 722 571, class:^((?i).*$w_class.*)$
 windowrulev2 = noblur, opaque, class:^((?i)jetbrains-.*)$
 windowrulev2 = noblur, opaque, class:^((?i).*codium)$
 
-
 # -------------------------------------------------------------------------
 
 # workspace 1
 $WORKSPACE=1
 windowrulev2 = workspace $WORKSPACE, class:^((?i)jetbrains-.*)$
-
-
 
 # workspace 2
 $WORKSPACE=2
@@ -135,33 +124,22 @@ windowrulev2 = workspace $WORKSPACE, class:^((?i).*Postman.*)$
 windowrulev2 = workspace $WORKSPACE, class:^((?i).*HTTPie.*)$
 windowrulev2 = workspace $WORKSPACE, class:^((?i).*codium)$
 
-
 # workspace 3
 $WORKSPACE=3
 windowrulev2 = workspace $WORKSPACE, class:^((?i)brave.*)$
-
-
 
 # workspace 4
 $WORKSPACE=4
 windowrulev2 = workspace $WORKSPACE, class:^((?i).*chrome.*)$
 
-
-
 # workspace 5
 $WORKSPACE=5
-
-
 
 # workspace 6
 $WORKSPACE=6
 
-
-
 # workspace 7
 $WORKSPACE=7
-
-
 
 # workspace 8
 $WORKSPACE=8
@@ -169,20 +147,14 @@ windowrulev2 = workspace $WORKSPACE, class:^((?i).*Nautilus)$
 windowrulev2 = workspace $WORKSPACE, class:^((?i).*dolphin)$
 windowrulev2 = workspace $WORKSPACE, class:^((?i)nemo)$
 
-
-
 # workspace 9
 $WORKSPACE=9
 windowrulev2 = workspace $WORKSPACE, class:^((?i)whatsdesk)$
 windowrulev2 = workspace $WORKSPACE, class:^((?i).*telegram.*)$
 
-
-
 # workspace 10
 $WORKSPACE=10
 windowrulev2 = workspace $WORKSPACE, class:^((?i).*spotify.*)$
-
-
 
 # workspace special
 $WORKSPACE=special:special
