--- a/dotfiles/.config/hypr/conf/monitors/1600x900.conf
+++ b/dotfiles/.config/hypr/conf/monitors/1600x900.conf
@@ -1,15 +1,6 @@
 # ----------------------------------------------------- 
 # Monitor Setup
-# name: "1600x900"
+# name: "1600x900@60"
 # ----------------------------------------------------- 
 
-monitor=,1920x1080@60,auto,1.25
-
-# unscale XWayland
-xwayland {
-  force_zero_scaling = true
-}
-
-# toolkit-specific scale
-env = GDK_SCALE,2
-env = XCURSOR_SIZE,32
+monitor=,1600x900,auto,1
