--- a/dotfiles/.config/hypr/conf/windowrules/default.conf
+++ b/dotfiles/.config/hypr/conf/windowrules/default.conf
@@ -106,6 +106,11 @@ windowrulev2 = float, class:^((?i).*$w_class.*)$
 windowrulev2 = center, class:^((?i).*$w_class.*)$
 windowrulev2 = size 38% 53%, class:^((?i).*$w_class.*)$
 
+#VirtualBox
+$w_class=VirtualBox
+windowrulev2 = float, class:^((?i)$w_class.*)$
+#windowrulev2 = center, class:^((?i)$w_class.*)$
+
 # -------------------------------------------------------------------------
 
 # decoraciones
