set exotic ubuntu theme margin

--- a/dotfiles/.config/waybar/themes/exotic-ubuntu/config
+++ b/dotfiles/.config/waybar/themes/exotic-ubuntu/config
@@ -10,7 +10,7 @@
 
 {
     // General Settings
-    "layer": "bottom",
+    "layer": "top",
     "margin-top": 0,
     "margin-bottom": 0,
     "margin-left": 0,
