--- a/dotfiles/.config/hypr/conf/windowrules/default.conf
+++ b/dotfiles/.config/hypr/conf/windowrules/default.conf
@@ -35,6 +35,8 @@ windowrulev2 = center, class:^(jetbrains-.*)$, title:^((?i).*settings.*|(?i)proj
 windowrulev2 = maxsize 1000 700, class:^(jetbrains-.*)$, title:^((?i).*settings.*)$
 windowrulev2 = maxsize 1000 700, class:^(jetbrains-.*)$, title:^((?i)project structure)$
 # windowrulev2 = size 0 0, class:^(jetbrains-.*)$, title:^((?i)new project)$
+windowrulev2 = size 600 400, class:^(jetbrains-.*)$, title:^((?i)Evaluate)$
+windowrulev2 = float, center, class:^(jetbrains-.*)$, title:^((?i)Replace All)$
 
 windowrulev2 = float, title:^((?i)welcome.*)$
 windowrulev2 = center, title:^((?i)welcome.*)$
