--- a/dotfiles/.config/hypr/conf/windowrules/default.conf
+++ b/dotfiles/.config/hypr/conf/windowrules/default.conf
@@ -37,6 +37,10 @@ windowrulev2 = maxsize 1000 700, class:^(jetbrains-.*)$, title:^((?i)project str
 # windowrulev2 = size 0 0, class:^(jetbrains-.*)$, title:^((?i)new project)$
 windowrulev2 = size 600 400, class:^(jetbrains-.*)$, title:^((?i)Evaluate)$
 windowrulev2 = float, center, class:^(jetbrains-.*)$, title:^((?i)Replace All)$
+windowrulev2 = float, center, class:^(jetbrains-.*)$, title:^(Undo)$
+windowrulev2 = float, center, class:^(jetbrains-.*)$, title:^(Redo)$
+
+windowrulev2 = maximize, class:^((?i)VisualVM.*)$
 
 windowrulev2 = float, title:^((?i)welcome.*)$
 windowrulev2 = center, title:^((?i)welcome.*)$
@@ -124,7 +128,6 @@ windowrulev2 = maximize, class:^((?i).*$w_class)$
 $w_class=rhythmbox
 windowrulev2 = maximize, class:^((?i)$w_class)$, initialTitle:^((?i)Rhythmbox)$
 #windowrulev2 = float, center, class:^((?i)$w_class)$, title:^((?i)Preferencias de Rhythmbox)$
-
 
 # -------------------------------------------------------------------------
 
