many changes, included keybindings, window rules and autostart apps

--- a/dotfiles/.config/hypr/conf/autostart.conf
+++ b/dotfiles/.config/hypr/conf/autostart.conf
@@ -55,4 +55,6 @@ exec-once = ~/.config/nwg-dock-hyprland/launch.sh
 
 exec-once = sh ~/hyprland-setup/scripts/autostart.sh
 
-exec-once = ram-jdk java-21-graalvm &
+exec-once = sh ~/hyprland-setup/scripts/copy-jdk-to-ram.sh java-21-graalvm &
+
+exec-once = sh ~/hyprland-setup/scripts/copy-jdk-to-ram.sh java-21-openjdk &
