--- a/dotfiles/.config/hypr/conf/keybindings/default.conf
+++ b/dotfiles/.config/hypr/conf/keybindings/default.conf
@@ -134,9 +134,10 @@ bind = , XF86PowerOff, exec, wlogout
 #bind = $mainMod, W, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
 
 # layout msgs
-#bind = $mainMod, Tab, movefocus, r
 bind = $mainMod, K, layoutmsg, swapwithmaster master
 bind = $mainMod, Tab, layoutmsg, cyclenext
+bind = ALT, Tab, layoutmsg, cycleprev
+
 
 bind = $mainMod SHIFT, M, layoutmsg, focusmaster
 bind = $mainMod SHIFT, M, fullscreen, 1
@@ -147,8 +148,8 @@ bind = $mainMod SHIFT, F, fullscreen, 0
 bind = $mainMod, HOME, exec, sh ~/.config/ml4w/settings/system-monitor.sh
 bind = $mainMod SHIFT, HOME, exec, sh ~/.config/ml4w/settings/system-monitor-alt.sh
 bind = $mainMod, END, exec, sh ~/.config/ml4w/settings/software.sh
-bind = $mainMod, NEXT, layoutmsg, cyclenext
-bind = $mainMod, PRIOR, layoutmsg, cycleprev
+bind = $mainMod, NEXT, layoutmsg, rollnext
+bind = $mainMod, PRIOR, layoutmsg, rollprev
 
 bind = ALT, M, layoutmsg, focusmaster
 bind = ALT SHIFT, up, layoutmsg, addmaster
