--- a/dotfiles/.config/hypr/conf/windowrules/default.conf
+++ b/dotfiles/.config/hypr/conf/windowrules/default.conf
@@ -157,6 +157,8 @@ windowrulev2 = workspace $WORKSPACE, class:^((?i).*chrome.*)$
 
 # workspace 5
 $WORKSPACE=5
+windowrulev2 = workspace $WORKSPACE, class:^(zoom)$
+
 
 # workspace 6
 $WORKSPACE=6
