themes and custom setups

--- a/dotfiles/.config/hypr/conf/keybindings/default.conf
+++ b/dotfiles/.config/hypr/conf/keybindings/default.conf
@@ -13,6 +13,8 @@ $TERMINAL = $(cat $ML4W_SETTINGS/terminal.sh)
 # Applications
 bind = $mainMod SHIFT, RETURN, exec, $ML4W_SETTINGS/terminal.sh
 bind = $mainMod, RETURN, togglespecialworkspace
+# bind = ALT, RETURN, togglespecialworkspace name:exotic
+
 
 bind = $mainMod, B, exec, $ML4W_SETTINGS/browser.sh # Open the browser
 
@@ -105,8 +107,8 @@ bind = $mainMod, SPACE, exec, pkill rofi || rofi -show drun -replace -i # Open a
 bind = $mainMod, L, exec, hyprlock # Lock screen
 bind = $mainMod SHIFT, L, exec, $TERMINAL --class console_screensaver -e asciiquarium
 bind = $mainMod, F1, exec, intellij-idea-ultimate-edition 
-bind = $mainMod, F2, exec, postman
-bind = ALT, F2, exec, httpie-desktop --ozone-platform-hint=auto
+bind = $mainMod, F2, exec, postman --ozone-platform-hint=wayland
+bind = ALT, F2, exec, httpie-desktop --ozone-platform-hint=wayland
 bind = $mainMod SHIFT, F9, exec, telegram-desktop
 bind = $mainMod, F9, exec, whatsdesk --ozone-platform-hint=auto
 bind = $mainMod, F10, exec, spotify --ozone-platform-hint=wayland
