--- a/dotfiles/.config/hypr/conf/layouts/default.conf
+++ b/dotfiles/.config/hypr/conf/layouts/default.conf
@@ -27,6 +27,7 @@ master {
     orientation = top                        # Default placement of the master area: left, right, top, bottom, or center
     inherit_fullscreen = true                 # Inherit fullscreen status when cycling/swapping to another window
 #    slave_count_for_center_master = 2         # when using orientation=center, make the master window centered only when at least this many slave windows are open.
+#	center_master_slaves_on_right = true      # set if the slaves should appear on right of master when slave_count_for_center_master > 2
     smart_resizing = true                     # Determine resizing direction based on mouse position on the window
     drop_at_cursor = true                     # Place dragged/dropped windows at cursor position or stack top/bottom
 }
