--- a/dotfiles/.config/hypr/conf/workspaces/default.conf
+++ b/dotfiles/.config/hypr/conf/workspaces/default.conf
@@ -1,5 +1,6 @@
 # reglas de workspace
 
+# f[1] quiere decir cuando las ventanas estan maximizadas
 workspace = f[1], gapsout:0, gapsin:0, border:false, rounding:false
 
 
@@ -59,4 +60,13 @@ $WORKSPACE=10
 # workspace special
 $WORKSPACE=special:special
 workspace = $WORKSPACE, layoutopt:orientation:left
-workspace = $WORKSPACE, on-created-empty: kitty
+#workspace = $WORKSPACE, on-created-empty: kitty
+workspace = $WORKSPACE, on-created-empty: WGPU_BACKEND=gl warp-terminal
+# workspace = $WORKSPACE, gapsout:0, gapsin:0
+
+# workspace special
+# $WORKSPACE=special:exotic
+# workspace = $WORKSPACE, layoutopt:orientation:left
+# workspace = $WORKSPACE, on-created-empty: nemo
+# workspace = $WORKSPACE, gapsout:0, gapsin:0
+
