--- a/dotfiles/.config/hypr/conf/windowrules/default.conf
+++ b/dotfiles/.config/hypr/conf/windowrules/default.conf
@@ -2,6 +2,8 @@
 
 source = window_types.conf
 
+# windowrulev2 = size 1600 900, floating:1, class:^((?i).*Warp)$
+
 # default start
 windowrulev2 = float, class: ^((?i)pavucontrol)$
 windowrulev2 = float, class: ^((?i)blueman-manager)$
@@ -129,6 +131,10 @@ $w_class=rhythmbox
 windowrulev2 = maximize, class:^((?i)$w_class)$, initialTitle:^((?i)Rhythmbox)$
 #windowrulev2 = float, center, class:^((?i)$w_class)$, title:^((?i)Preferencias de Rhythmbox)$
 
+#TradingView
+$w_class=TradingView
+windowrulev2 = maximize, class:^((?i)$w_class)$
+
 # -------------------------------------------------------------------------
 
 # decoraciones
@@ -141,30 +147,48 @@ windowrulev2 = noblur, opaque, class:^((?i).*codium)$
 $WORKSPACE=1
 windowrulev2 = workspace $WORKSPACE, class:^((?i)jetbrains-.*)$
 
+
+
 # workspace 2
 $WORKSPACE=2
 windowrulev2 = workspace $WORKSPACE, class:^((?i).*Postman.*)$
 windowrulev2 = workspace $WORKSPACE, class:^((?i).*HTTPie.*)$
 windowrulev2 = workspace $WORKSPACE, class:^((?i).*codium)$
 
+
+
 # workspace 3
 $WORKSPACE=3
-windowrulev2 = workspace $WORKSPACE, class:^((?i)brave.*)$
+windowrulev2 = workspace $WORKSPACE, class:^((?i)TradingView.*)$
+
+
 
 # workspace 4
 $WORKSPACE=4
-windowrulev2 = workspace $WORKSPACE, class:^((?i).*chrome.*)$
+windowrulev2 = workspace $WORKSPACE, class:^((?i)brave.*)$
+
+
 
 # workspace 5
 $WORKSPACE=5
+windowrulev2 = workspace $WORKSPACE, class:^((?i).*chrome.*)$
+
+
+
 windowrulev2 = workspace $WORKSPACE, class:^(zoom)$
+windowrulev2 = workspace $WORKSPACE, class:^((?i)cursor.*)$
+
 
 
 # workspace 6
 $WORKSPACE=6
 
+
+
 # workspace 7
 $WORKSPACE=7
+
+
 
 # workspace 8
 $WORKSPACE=8
@@ -172,16 +196,23 @@ windowrulev2 = workspace $WORKSPACE, class:^((?i).*Nautilus)$
 windowrulev2 = workspace $WORKSPACE, class:^((?i).*dolphin)$
 windowrulev2 = workspace $WORKSPACE, class:^((?i)nemo)$
 
+
+
 # workspace 9
 $WORKSPACE=9
 windowrulev2 = workspace $WORKSPACE, class:^((?i)whatsdesk)$
 windowrulev2 = workspace $WORKSPACE, class:^((?i).*telegram.*)$
+
+
 
 # workspace 10
 $WORKSPACE=10
 windowrulev2 = workspace $WORKSPACE, class:^((?i).*spotify.*)$
 windowrulev2 = workspace $WORKSPACE, class:^((?i)rhythmbox)$
 
+
+
 # workspace special
 $WORKSPACE=special:special
 windowrulev2 = fullscreen, onworkspace:name:$WORKSPACE
+# windowrulev2 = float, onworkspace:name:$WORKSPACE
