new display resolution

--- a/dotfiles/.config/hypr/conf/environments/default.conf
+++ b/dotfiles/.config/hypr/conf/environments/default.conf
@@ -5,7 +5,7 @@ env = SDL_VIDEODRIVER,wayland
 
 # se utiliza la tarjeta intel por defecto
 #env = AQ_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0
-#env = AQ_DRM_DEVICES,/dev/dri/card1
+env = AQ_DRM_DEVICES,/dev/dri/card1
 
 #env = XDG_SESSION_DESKTOP,KDE
 #env = XDG_CURRENT_DESKTOP,KDE
