--- a/dotfiles/.config/hypr/conf/windowrules/default.conf
+++ b/dotfiles/.config/hypr/conf/windowrules/default.conf
@@ -5,7 +5,7 @@ source = window_types.conf
 # windowrulev2 = size 1600 900, floating:1, class:^((?i).*Warp)$
 
 # default start
-windowrulev2 = float, class: ^((?i)pavucontrol)$
+windowrulev2 = float, class: ^((?i)pavucontrol.*)$
 windowrulev2 = float, class: ^((?i)blueman-manager)$
 windowrulev2 = float, class: ^((?i)nm-connection-editor)$
 windowrulev2 = float, class: ^((?i)qalculate-gtk)$
