--- a/dotfiles/.config/waypaper/config.ini
+++ b/dotfiles/.config/waypaper/config.ini
@@ -2,7 +2,7 @@
 language = en
 folder = ~/hyprland-setup/wallpapers
 monitors = All
-wallpaper = ~/hyprland-setup/wallpapers/copper_mountain.jpg
+wallpaper = ~/hyprland-setup/wallpapers/Forever-Shady-S.jpg
 backend = hyprpaper
 fill = fill
 sort = name
@@ -19,4 +19,7 @@ swww_transition_angle = 0
 swww_transition_duration = 2
 swww_transition_fps = 60
 use_xdg_state = False
+all_subfolders = False
+mpvpaper_sound = False
+mpvpaper_options = 
 
