edited window rules and new env vars for java home

--- a/dotfiles/.config/hypr/conf/environments/default.conf
+++ b/dotfiles/.config/hypr/conf/environments/default.conf
@@ -12,3 +12,5 @@ env = AQ_DRM_DEVICES,/dev/dri/card1
 #env = QT_STYLE_OVERRIDE,Breeze
 
 env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/gcr/ssh
+
+env = JAVA_HOME,/usr/lib/jvm/default
