--- a/dotfiles/.config/hypr/conf/windowrules/default.conf
+++ b/dotfiles/.config/hypr/conf/windowrules/default.conf
@@ -56,13 +56,16 @@ windowrulev2 = maximize, class:^((?i)Brave.*)$
 
 # se pueden usar dos propiedades o condiciones en una sola linea, pero por orden se separan
 # VSCodium
+
+# xdg-desktop-portal-gtk --> file chooser por defecto
+windowrulev2 = float, class:^(xdg-desktop-portal-gtk)
+windowrulev2 = center, class:^(xdg-desktop-portal-gtk)
+windowrulev2 = size 70% 80%, class:^(xdg-desktop-portal-gtk)
+
+# vscodium file chooser
 windowrulev2 = float, class:^((?i).*codium.*), title:^((?i).*Save .*|(?i).*Open .*)
 windowrulev2 = center, class:^((?i).*codium.*), title:^((?i).*Save .*|(?i).*Open .*)
-windowrulev2 = size 50% 70%, class:^((?i).*codium.*), title:^((?i).*Save .*|(?i).*Open .*)
-
-# desktop portal
-windowrulev2 = float, class:^((?i).*desktop-portal-gtk)$
-windowrulev2 = center, class:^((?i).*desktop-portal-gtk)$
+windowrulev2 = size 70% 80%, class:^((?i).*codium.*), title:^((?i).*Save .*|(?i).*Open .*)
 
 # ark
 windowrulev2 = float, class:^((?i)org.kde.ark)$
@@ -140,6 +143,8 @@ windowrulev2 = maximize, class:^((?i)$w_class)$
 # decoraciones
 windowrulev2 = noblur, opaque, class:^((?i)jetbrains-.*)$
 windowrulev2 = noblur, opaque, class:^((?i).*codium)$
+
+windowrulev2 = fullscreen, noblur, opaque, noborder, class:^((?i)steam_app_.*)$
 
 # -------------------------------------------------------------------------
 
