new keybindings and window rules

--- a/dotfiles/.config/hypr/conf/keybindings/default.conf
+++ b/dotfiles/.config/hypr/conf/keybindings/default.conf
@@ -108,9 +108,10 @@ bind = $mainMod, L, exec, hyprlock # Lock screen
 bind = $mainMod SHIFT, L, exec, $TERMINAL --class console_screensaver -e asciiquarium
 bind = $mainMod, F1, exec, intellij-idea-ultimate-edition 
 bind = $mainMod, F2, exec, postman --ozone-platform-hint=wayland
+bind = $mainMod, F3, exec, tradingview --ozone-platform-hint=wayland
 bind = ALT, F2, exec, httpie-desktop --ozone-platform-hint=wayland
 bind = $mainMod SHIFT, F9, exec, telegram-desktop
-bind = $mainMod, F9, exec, whatsdesk --ozone-platform-hint=auto
+bind = $mainMod, F9, exec, whatsdesk --ozone-platform-hint=wayland
 bind = $mainMod, F10, exec, spotify --ozone-platform-hint=wayland
 bind = $mainMod SHIFT, F10, exec, rhythmbox
 bind = $mainMod SHIFT, B, exec, brave
