--- a/dotfiles/.config/hypr/conf/windowrules/default.conf
+++ b/dotfiles/.config/hypr/conf/windowrules/default.conf
@@ -135,8 +135,8 @@ windowrulev2 = maximize, class:^((?i)$w_class)$, initialTitle:^((?i)Rhythmbox)$
 #windowrulev2 = float, center, class:^((?i)$w_class)$, title:^((?i)Preferencias de Rhythmbox)$
 
 #TradingView
-$w_class=TradingView
-windowrulev2 = maximize, class:^((?i)$w_class)$
+#$w_class=TradingView
+
 
 # -------------------------------------------------------------------------
 
