fix: Window rules and keybindings

--- a/dotfiles/.config/hypr/conf/workspaces/default.conf
+++ b/dotfiles/.config/hypr/conf/workspaces/default.conf
@@ -11,21 +11,27 @@ workspace = $WORKSPACE, defaultName:ide
 
 # workspace 2
 $WORKSPACE=2
+workspace = $WORKSPACE, name:dev-utils
 
 
 
 # workspace 3
 $WORKSPACE=3
+workspace = $WORKSPACE, name:trading-tools
 
 
 
 # workspace 4
 $WORKSPACE=4
-
+workspace = $WORKSPACE, name:browser-development
+workspace = $WORKSPACE, layoutopt:orientation:right
 
 
 # workspace 5
 $WORKSPACE=5
+workspace = $WORKSPACE, name:browser
+workspace = $WORKSPACE, layoutopt:orientation:right
+
 
 
 
@@ -61,7 +67,7 @@ $WORKSPACE=10
 $WORKSPACE=special:special
 workspace = $WORKSPACE, layoutopt:orientation:left
 #workspace = $WORKSPACE, on-created-empty: kitty
-workspace = $WORKSPACE, on-created-empty: WGPU_BACKEND=gl warp-terminal
+workspace = $WORKSPACE, on-created-empty: warp-terminal
 # workspace = $WORKSPACE, gapsout:0, gapsin:0
 
 # workspace special
