--- a/dotfiles/.config/hypr/conf/keybindings/default.conf
+++ b/dotfiles/.config/hypr/conf/keybindings/default.conf
@@ -24,6 +24,9 @@ bind = $mainMod SHIFT, E, exec, $ML4W_SETTINGS/filemanager_alt.sh
 
 # Windows
 bind = $mainMod, Q, killactive
+# bind = $mainMod, Q, forcekillactive
+bind = ALT, Q, signal, 15 # SIGTERM
+	
 bindm = $mainMod, mouse:272, movewindow # Move window with the mouse
 bindm = $mainMod, mouse:273, resizewindow # Resize window with the mouse
 bind = $mainMod SHIFT, right, resizeactive, 100 0 # Increase window width with SCRIPTS
@@ -125,11 +128,6 @@ bind = $mainMod, C, centerwindow
 #bind = $mainMod, J, cyclenext
 bind = $mainMod, ESCAPE, exit
 bind = $mainMod, R, exec, hyprctl reload & ~/.config/waybar/launch.sh
-
-
-bind = ALT, Q, exec, hyprctl activewindow | grep pid | tr -d 'pid:'| xargs kill
-#bind = $mainMod SHIFT, RETURN, exec, WGPU_BACKEND=gl warp-terminal
-
 
 # recordar cambiar la propiedad HandlePowerKey=ignore en /etc/systemd/logind.service y luego reiniciar systemd-logind.service
 bind = , XF86PowerOff, exec, wlogout
