--- a/dotfiles/.config/hypr/conf/windowrules/default.conf
+++ b/dotfiles/.config/hypr/conf/windowrules/default.conf
@@ -41,6 +41,8 @@ windowrulev2 = size 600 400, class:^(jetbrains-.*)$, title:^((?i)Evaluate)$
 windowrulev2 = float, center, class:^(jetbrains-.*)$, title:^((?i)Replace All)$
 windowrulev2 = float, center, class:^(jetbrains-.*)$, title:^(Undo)$
 windowrulev2 = float, center, class:^(jetbrains-.*)$, title:^(Redo)$
+# windowrulev2 = noinitialfocus, class:^(jetbrains-.*)$, floating:1
+windowrulev2 = nofocus, class:^(jetbrains-.*)$, floating:1
 
 windowrulev2 = maximize, class:^((?i)VisualVM.*)$
 
