fix: Hypr setup is now more simple

--- a/dotfiles/.config/hypr/conf/windowrule.conf
+++ b/dotfiles/.config/hypr/conf/windowrule.conf
@@ -1,1 +1,223 @@
-source = windowrules/default.conf
+# reglas de ventana
+
+# windowrulev2 = size 1600 900, floating:1, class:^((?i).*Warp)$
+
+# default start
+windowrulev2 = float, class: ^((?i)pavucontrol.*)$
+windowrulev2 = float, class: ^((?i)blueman-manager)$
+windowrulev2 = float, class: ^((?i)nm-connection-editor)$
+windowrulev2 = float, class: ^((?i)qalculate-gtk)$
+
+# Browser Picture in Picture
+windowrulev2 = float, title:^((?i)Picture-in-Picture)$
+windowrulev2 = pin, title:^((?i)Picture-in-Picture)$
+windowrulev2 = move 69.5% 4%, title:^((?i)Picture-in-Picture)$
+# default end
+
+# --------------------------------------------------------------------------------
+
+# ------------------------------------------------------------------------
+# tipos de visualizacion
+#windowrulev2 = fullscreen, class:^((?i)kitty)$
+windowrulev2 = maximize, class:^((?i)whatsdesk)$
+windowrulev2 = maximize, class:^((?i).*telegram.*)$
+windowrulev2 = maximize, class:^((?i).*spotify.*)$
+windowrulev2 = fullscreen, class:^((?i).*Postman.*)$
+windowrulev2 = fullscreen, class:^((?i).*HTTPie.*)$
+
+windowrulev2 = float, center, class:^((?i).*megasync.*)$
+# windowrulev2 = size 0 0, class:^((?i).*megasync.*)$, title:^((?i).*MEGAsync.*)$
+
+# Settings
+
+windowrulev2 = float, class:^(jetbrains-.*)$, title:^((?i).*settings.*|(?i)project structure|(?i)new project)$
+windowrulev2 = center, class:^(jetbrains-.*)$, title:^((?i).*settings.*|(?i)project structure|(?i)new project)$
+windowrulev2 = maxsize 1000 700, class:^(jetbrains-.*)$, title:^((?i).*settings.*)$
+windowrulev2 = maxsize 1000 700, class:^(jetbrains-.*)$, title:^((?i)project structure)$
+# windowrulev2 = size 0 0, class:^(jetbrains-.*)$, title:^((?i)new project)$
+windowrulev2 = size 600 400, class:^(jetbrains-.*)$, title:^((?i)Evaluate)$
+windowrulev2 = float, center, class:^(jetbrains-.*)$, title:^((?i)Replace All)$
+windowrulev2 = float, center, class:^(jetbrains-.*)$, title:^(Undo)$
+windowrulev2 = float, center, class:^(jetbrains-.*)$, title:^(Redo)$
+# windowrulev2 = noinitialfocus, class:^(jetbrains-.*)$, floating:1
+windowrulev2 = nofocus, class:^(jetbrains-.*)$, floating:1
+
+windowrulev2 = maximize, class:^((?i)VisualVM.*)$
+
+windowrulev2 = float, title:^((?i)welcome.*)$
+windowrulev2 = center, title:^((?i)welcome.*)$
+
+windowrulev2 = float, title:^((?i).*Plugin Updates.*)$
+windowrulev2 = center, title:^((?i).*Plugin Updates)$
+windowrulev2 = size 0 0, title:^((?i).*Plugin Updates.*)$
+
+windowrulev2 = maximize, class:^((?i).*chrome.*)$
+windowrulev2 = maximize, class:^((?i)Brave.*)$
+
+# se pueden usar dos propiedades o condiciones en una sola linea, pero por orden se separan
+# VSCodium
+
+# xdg-desktop-portal-gtk --> file chooser por defecto
+windowrulev2 = float, class:^(xdg-desktop-portal-gtk)
+windowrulev2 = center, class:^(xdg-desktop-portal-gtk)
+windowrulev2 = size 70% 80%, class:^(xdg-desktop-portal-gtk)
+
+# vscodium file chooser
+windowrulev2 = float, class:^((?i).*codium.*), title:^((?i).*Save .*|(?i).*Open .*)
+windowrulev2 = center, class:^((?i).*codium.*), title:^((?i).*Save .*|(?i).*Open .*)
+windowrulev2 = size 70% 80%, class:^((?i).*codium.*), title:^((?i).*Save .*|(?i).*Open .*)
+
+# ark
+windowrulev2 = float, class:^((?i)org.kde.ark)$
+windowrulev2 = center, class:^((?i)org.kde.ark)$
+windowrulev2 = size 50% 80%, class:^((?i)org.kde.ark)$
+
+# nemo file roller
+windowrulev2 = float, class:^((?i).*FileRoller)$
+windowrulev2 = center, class:^((?i).*FileRoller)$
+
+# nemo properties
+windowrulev2 = float, center, class:^((?i).*nemo)$, title:^((?i)Propiedades de.*|(?i)Properties .*)$
+windowrulev2 = size 50% 80%, class:^((?i).*nemo)$, title:^((?i)Propiedades de.*|(?i)Properties .*)$
+
+# Gnome Calendar
+windowrulev2 = float, class:^((?i).*Calendar)$
+windowrulev2 = center, class:^((?i).*Calendar)$
+
+# Nemo Terminal
+windowrulev2 = float, class:^((?i)nemo-terminal-prefs)$
+windowrulev2 = center, class:^((?i)nemo-terminal-prefs)$
+
+# Gwenview
+windowrulev2 = float, class:^((?i).*gwenview)$
+windowrulev2 = center, class:^((?i).*gwenview)$
+windowrulev2 = size 50% 80%, class:^((?i).*gwenview)$
+
+#Shotwell
+$w_class=Shotwell
+windowrulev2 = float, class:^((?i).*$w_class)$
+windowrulev2 = center, class:^(.*$w_class)$
+windowrulev2 = size 50% 80%, class:^(.*$w_class)$
+
+#Whatsdesk
+#$w_class=whatsdesk
+#windowrulev2 = float, class:^((?i).*$w_class)$
+#windowrulev2 = center, class:^((?i).*$w_class)$
+#windowrulev2 = size 70% 90%, class:^((?i).*$w_class)$
+#windowrulev2 = move onscreen 15% 7%, class:^((?i).*$w_class)$
+
+#Telegram
+#$w_class=telegram
+#windowrulev2 = float, class:^((?i).*$w_class.*)$
+#windowrulev2 = center, class:^((?i).*$w_class.*)$
+#windowrulev2 = size 80% 90%, class:^((?i).*$w_class.*)$
+#windowrulev2 = move onscreen 5% 7%, class:^((?i).*$w_class.*)$
+
+#Qmmp
+$w_class=qmmp
+windowrulev2 = float, class:^((?i).*$w_class.*)$
+windowrulev2 = center, class:^((?i).*$w_class.*)$
+windowrulev2 = size 38% 53%, class:^((?i).*$w_class.*)$
+
+#VirtualBox
+$w_class=VirtualBox
+windowrulev2 = maximize, center, class:^((?i)$w_class Manager)$
+windowrulev2 = float, class:^((?i)$w_class)$
+windowrulev2 = float, center, class:^((?i)$w_class Machine|(?i)$w_class VM)$
+
+#Okular
+$w_class=okular
+windowrulev2 = maximize, class:^((?i).*$w_class)$
+
+#Rhythmbox
+$w_class=rhythmbox
+windowrulev2 = maximize, class:^((?i)$w_class)$, initialTitle:^((?i)Rhythmbox)$
+#windowrulev2 = float, center, class:^((?i)$w_class)$, title:^((?i)Preferencias de Rhythmbox)$
+
+#TradingView
+#$w_class=TradingView
+
+
+# -------------------------------------------------------------------------
+
+# decoraciones
+windowrulev2 = noblur, opaque, class:^((?i)jetbrains-.*)$
+windowrulev2 = noblur, opaque, class:^((?i).*codium)$
+
+windowrulev2 = fullscreen, noblur, opaque, noborder, class:^((?i)steam_app_.*)$
+
+# -------------------------------------------------------------------------
+
+# workspace 1
+$WORKSPACE=1
+windowrulev2 = workspace $WORKSPACE, class:^((?i)jetbrains-.*)$
+
+
+
+# workspace 2
+$WORKSPACE=2
+windowrulev2 = workspace $WORKSPACE, class:^((?i).*Postman.*)$
+windowrulev2 = workspace $WORKSPACE, class:^((?i).*HTTPie.*)$
+windowrulev2 = workspace $WORKSPACE, class:^((?i).*codium)$
+
+
+
+# workspace 3
+$WORKSPACE=3
+windowrulev2 = workspace $WORKSPACE, class:^((?i)TradingView.*)$
+
+
+
+# workspace 4
+$WORKSPACE=4
+windowrulev2 = workspace $WORKSPACE, class:^((?i)brave.*)$
+
+
+
+# workspace 5
+$WORKSPACE=5
+windowrulev2 = workspace $WORKSPACE, class:^((?i).*chrome.*)$
+
+
+
+windowrulev2 = workspace $WORKSPACE, class:^(zoom)$
+windowrulev2 = workspace $WORKSPACE, class:^((?i)cursor.*)$
+
+
+
+# workspace 6
+$WORKSPACE=6
+
+
+
+# workspace 7
+$WORKSPACE=7
+
+
+
+# workspace 8
+$WORKSPACE=8
+windowrulev2 = workspace $WORKSPACE, class:^((?i).*Nautilus)$
+windowrulev2 = workspace $WORKSPACE, class:^((?i).*dolphin)$
+windowrulev2 = workspace $WORKSPACE, class:^((?i)nemo)$
+
+
+
+# workspace 9
+$WORKSPACE=9
+windowrulev2 = workspace $WORKSPACE, class:^((?i)whatsdesk)$
+windowrulev2 = workspace $WORKSPACE, class:^((?i).*telegram.*)$
+
+
+
+# workspace 10
+$WORKSPACE=10
+windowrulev2 = workspace $WORKSPACE, class:^((?i).*spotify.*)$
+windowrulev2 = workspace $WORKSPACE, class:^((?i)rhythmbox)$
+
+
+
+# workspace special
+$WORKSPACE=special:special
+windowrulev2 = fullscreen, onworkspace:name:$WORKSPACE
+# windowrulev2 = float, onworkspace:name:$WORKSPACE
