--- a/dotfiles/.config/hypr/conf/custom.conf
+++ b/dotfiles/.config/hypr/conf/custom.conf
@@ -13,17 +13,20 @@
 
 # SDL version
 env = SDL_VIDEODRIVER,wayland
-# env = SDL_VIDEODRIVER,x11
 
 # No Hardware Cursor
-# cursor {
-#     no_hardware_cursors = false
-# }
+cursor {
+     no_hardware_cursors = true
+}
+
+# Blur for waybar
+layerrule = blur, waybar
+
+# Console Screensaver
+$class_name = console_screensaver
+windowrulev2 = fullscreen, class:($class_name)
+
 
 # Source para cada carpeta
 source = plugin.conf
 source = workspace.conf
-source = extra.conf
-
-# Blur for waybar
-layerrule = blur, waybar
