--- a/dotfiles/.config/hypr/conf/layout.conf
+++ b/dotfiles/.config/hypr/conf/layout.conf
@@ -1,1 +1,33 @@
-source = layouts/default.conf
+# ----------------------------------------------------- 
+# Layouts
+# ----------------------------------------------------- 
+
+dwindle {
+    pseudotile = false                      # Enable pseudotiling: Pseudotiled windows retain their floating size when tiled.
+    force_split = 1                         # 0 -> Split follows mouse, 1 -> Always split to the left/top, 2 -> Always split to the right/bottom.
+    preserve_split = false                  # If enabled, the split (side/top) will not change regardless of what happens to the container.
+    smart_split = false                     # Allows precise control over split direction based on the cursor’s position (divides window into triangles).
+    smart_resizing = false                   # Resizing direction is determined by the mouse’s position on the window (nearest corner).
+    permanent_direction_override = false   # Makes the preselect direction persist until changed or reset.
+    special_scale_factor = 1               # Specifies the scale factor of windows on the special workspace [0 - 1].
+    split_width_multiplier = 1.0           # Specifies the auto-split width multiplier.
+    use_active_for_splits = false           # Whether to prefer the active window or the mouse position for splits.
+    default_split_ratio = 1.0              # The default split ratio on window open (1 means an even 50/50 split) [0.1 - 1.9].
+    split_bias = 1                         # Specifies which window receives the larger half of a split: 0 -> positional, 1 -> current, 2 -> opening.
+}
+
+
+master {
+    allow_small_split = false                 # Enable adding additional master windows in a horizontal split style
+    special_scale_factor = 1.0               # The scale of the special workspace windows. [0.0 - 1.0]
+    mfact = 0.65                              # The size as a percentage of the master window (e.g., 0.55 means 55% master, 45% slave)
+    new_status = master                        # New window status: master, slave, or inherit from focused window
+    new_on_top = false                        # Whether a newly opened window should be on the top of the stack
+    new_on_active = none                      # Placement of new window: before, after, or none
+    orientation = top                        # Default placement of the master area: left, right, top, bottom, or center
+    inherit_fullscreen = true                 # Inherit fullscreen status when cycling/swapping to another window
+#    slave_count_for_center_master = 2         # when using orientation=center, make the master window centered only when at least this many slave windows are open.
+#	center_master_slaves_on_right = true      # set if the slaves should appear on right of master when slave_count_for_center_master > 2
+    smart_resizing = true                     # Determine resizing direction based on mouse position on the window
+    drop_at_cursor = true                     # Place dragged/dropped windows at cursor position or stack top/bottom
+}
