fix: Hypr setup more changes

--- a/dotfiles/.config/hypr/conf/windowrule.conf
+++ b/dotfiles/.config/hypr/conf/windowrule.conf
@@ -14,6 +14,13 @@ windowrulev2 = pin, title:^((?i)Picture-in-Picture)$
 windowrulev2 = move 69.5% 4%, title:^((?i)Picture-in-Picture)$
 # default end
 
+# Console Utils Window
+$custom_class = console-utils
+windowrulev2 = float, class:($custom_class)
+windowrulev2 = size 95% 85%, class:($custom_class)
+windowrulev2 = center, class:($custom_class)
+#windowrulev2 = pin, class:($custom_class)
+
 # --------------------------------------------------------------------------------
 
 # ------------------------------------------------------------------------
