refactor: updated some files to ml4w 2.9.8 version

--- a/dotfiles/.config/hypr/conf/ml4w.conf
+++ b/dotfiles/.config/hypr/conf/ml4w.conf
@@ -87,3 +87,11 @@ windowrulev2 = float,class:(dotfiles-floating)
 windowrulev2 = size 1000 700,class:(dotfiles-floating)
 windowrulev2 = center,class:(dotfiles-floating)
 # windowrulev2 = pin, class:(dotfiles-floating)
+
+# SwayNC
+layerrule = blur, swaync-control-center
+layerrule = blur, swaync-notification-window
+layerrule = ignorezero, swaync-control-center
+layerrule = ignorezero, swaync-notification-window
+layerrule = ignorealpha 0.5, swaync-control-center
+layerrule = ignorealpha 0.5, swaync-notification-window
