fix: Changed keybindings and disable dock

--- a/dotfiles/.config/hypr/conf/keybinding.conf
+++ b/dotfiles/.config/hypr/conf/keybinding.conf
@@ -114,14 +114,11 @@ bind = ALT, LEFT, exec, playerctl previous # Audio previous
 bind = $mainMod, SPACE, exec, pkill rofi || rofi -show drun -replace -i # Open application launcher
 bind = $mainMod, L, exec, hyprlock # Lock screen
 bind = $mainMod SHIFT, L, exec, $TERMINAL --class console_screensaver -e asciiquarium
-bind = $mainMod, F1, exec, intellij-idea-ultimate-edition 
-bind = $mainMod, F2, exec, postman --ozone-platform-hint=wayland
-bind = $mainMod, F3, exec, tradingview --ozone-platform-hint=wayland
-bind = ALT, F2, exec, httpie-desktop --ozone-platform-hint=wayland
-bind = $mainMod SHIFT, F9, exec, telegram-desktop
+bind = $mainMod, I, exec, intellij-idea-ultimate-edition 
+bind = $mainMod SHIFT, I, exec, postman --ozone-platform-hint=wayland
+bind = ALT SHIFT, I, exec, httpie-desktop --ozone-platform-hint=wayland
 bind = $mainMod, F9, exec, whatsdesk --ozone-platform-hint=wayland
 bind = $mainMod, F10, exec, spotify
-bind = $mainMod SHIFT, F10, exec, rhythmbox
 bind = $mainMod SHIFT, B, exec, brave
 
 bind = $mainMod, F, fullscreen, 0
@@ -177,9 +174,9 @@ bind = ALT SHIFT, C, layoutmsg, orientationcenter
 bind = ALT SHIFT, T, layoutmsg, orientationtop
 bind = ALT SHIFT, B, layoutmsg, orientationbottom
 
-bind = ALT SHIFT, K, exec, $TERMINAL --class dotfiles-floating -e micro ~/dotfiles/.config/hypr/conf/keybindings/default.conf
-bind = ALT SHIFT, W, exec, $TERMINAL --class dotfiles-floating -e micro ~/dotfiles/.config/hypr/conf/windowrules/default.conf
-bind = ALT SHIFT, E, exec, $TERMINAL --class dotfiles-floating -e micro ~/dotfiles/.config/hypr/conf/workspaces/default.conf
+bind = ALT SHIFT, K, exec, $TERMINAL --class dotfiles-floating -e micro ~/dotfiles/.config/hypr/conf/keybinding.conf
+bind = ALT SHIFT, W, exec, $TERMINAL --class dotfiles-floating -e micro ~/dotfiles/.config/hypr/conf/windowrule.conf
+bind = ALT SHIFT, E, exec, $TERMINAL --class dotfiles-floating -e micro ~/dotfiles/.config/hypr/conf/workspace.conf
 bind = ALT SHIFT, G, exec, $TERMINAL --class dotfiles-floating -e micro ~/dotfiles/.config/hypr/conf/ml4w.conf
 bind = ALT SHIFT, A, exec, $TERMINAL --class dotfiles-floating -e micro ~/dotfiles/.config/hypr/conf/autostart.conf
 bind = ALT SHIFT, C, exec, $TERMINAL --class dotfiles-floating -e micro ~/dotfiles/.config/hypr/conf/custom.conf
