--- a/dotfiles/.config/hypr/conf/keybinding.conf
+++ b/dotfiles/.config/hypr/conf/keybinding.conf
@@ -116,8 +116,8 @@ bind = $mainMod SHIFT, L, exec, $TERMINAL --class console_screensaver -e asciiqu
 bind = $mainMod, I, exec, intellij-idea-ultimate-edition 
 bind = $mainMod SHIFT, I, exec, postman --ozone-platform-hint=wayland
 bind = ALT SHIFT, I, exec, httpie-desktop --ozone-platform-hint=wayland
-bind = $mainMod, F9, exec, whatsdesk --ozone-platform-hint=wayland
-bind = $mainMod, F10, exec, spotify
+bind = , XF86Launch3, exec, spotify
+
 bind = $mainMod SHIFT, B, exec, brave
 
 bind = $mainMod, F, fullscreen, 0
